skin/admin/canon/basic.css
/* ... */
#main-action #action-helper
{
	padding-left                     : 15px;
}

#main-action li span
{
	display                          : none;
}

#main-action li a
{
	background-image				 : url("./image/tc-icons.png");
	color                            : #222;
	width                            : 25px;
	height                           : 25px;
	display                          : block;
}

#action-helper a		{ background-position: -50px 0; }
#action-helper a:hover	{ background-position: -50px -25px; }


#action-move-to-control-panel a			{ background-position: -75px 0; }
#action-move-to-control-panel a:hover	{ background-position: -75px -25px; }

#action-logout a						{ background-position: -25px 0; }
#action-logout a:hover					{ background-position: -25px -25px; }

#action-move-to-blog a					{ background-position: 0 0; }
#action-move-to-blog a:hover			{ background-position: 0 -25px; }

/* main - blog selector */
#main-blog-box
{
	height                           : 27px;
	line-height                      : 3em;
	margin-top                       : 0;
	position                         : fixed;
	bottom                           : 5px;
	right                            : 0;
	width                            : 140px;
	z-index                          : 510;
}

#main-blog label
{
	display                          : none;
}

#blog-list
{
	width                            : 135px;
	color                            : #444;
	border                           : 1px solid #CCC;
}

/* main menu */
#main-menu-box
{
	
	background: rgb(125,126,125); /* Old browsers */
	background: -moz-linear-gradient(top, rgba(125,126,125,1) 0%, rgba(51,51,51,1) 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(125,126,125,1)), color-stop(100%,rgba(51,51,51,1))); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, rgba(125,126,125,1) 0%,rgba(51,51,51,1) 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, rgba(125,126,125,1) 0%,rgba(51,51,51,1) 100%); /* Opera11.10+ */
	background: -ms-linear-gradient(top, rgba(125,126,125,1) 0%,rgba(51,51,51,1) 100%); /* IE10+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#333333',GradientType=0 ); /* IE6-9 */
	background: linear-gradient(top, rgba(125,126,125,1) 0%,rgba(51,51,51,1) 100%); /* W3C */
	background-repeat                : repeat-x;
	height                           : 35px;
	line-height                      : 35px;
	margin-top                       : 0;
	width                            : 100%;
	position                         : fixed;
	top                              : 0;
	z-index                          : 200;
	box-shadow              		 : 0 2px 3px rgba(0, 0, 0, 0.3);
	-webkit-box-shadow               : 0 2px 3px rgba(0, 0, 0, 0.3);
	-moz-box-shadow               : 0 2px 3px rgba(0, 0, 0, 0.3);
}

#main-menu
{

	height                           : 35px;
	width                            : 100%;
	z-index							 : 200 !important;
}

#main-menu li
{
	float                            : left;
	position                         : relative;
	height                           : 35px;
	z-index                          : 400;   /* Workaround for IE6 positioned element bug */
	margin                           : 0 3px 0 5px;
	padding                          : 0;
}

#main-menu #menu-center,
#main-menu #menu-entry,
#main-menu #menu-communication,
#main-menu #menu-network,
#main-menu #menu-skin,
#main-menu #menu-plugin,
#main-menu #menu-setting, 
#main-menu #menu-control 
{

}

#main-menu #menu-center
{

}

#main-menu #menu-center a.menu-name span
{

}

#main-menu a.menu-name
{
	height                           : 35px;
	line-height						 : 30px; 
	padding			                 : 0 10px 0 5px;
	display                          : block !important;
	font-weight: bold;
	text-shadow: 0 -1px 0 #000;
	color: #fff;
	
}

#main-menu li a:link,
#main-menu li a:visited
{
	text-decoration                  : none;
}

#main-menu li a:hover,
#main-menu li a:active
{
	color                            : #ADFF2F;
	text-decoration                  : none;
}

#main-menu li.selected
{
	color                            : #ADFF2F;
}

#main-menu li.selected a
{
	color                            : #ADFF2F !important;
}

#main-menu li ul li.selected
{
	background-color                 : #DDD !important;
}

#main-menu li:hover
{
	
}

#main-menu li:hover a,
#main-menu li a:hover
{
	color                            : #FAFAA0;
}

#main-menu li:hover a.menu-name
{
	-webkit-transition-duration      : 300ms;
	-moz-transition-duration         : 300ms;
}

#main-menu li ul.sub-menu 
{
	display                          : block;
	border                           : none;
	opacity: 0;

	
	width                            : 150px;
	color                            : #222;
    position                         : absolute;
	z-index                          : 100 !important;
	top                              : -600px; 
	left                             : 0;
	border                           : none;
	background-color                 : #eee;
	background-image				 : -moz-linear-gradient(center top , #888 0px, #eee 4px);
/*	background-image                 : url("./image/bg_menu_selected.png");
	background-repeat                : no-repeat;
    filter                           : alpha(opacity=90);
	opacity                          : .90;
	background-position              : -130px -33px; */
	
	padding                          : 0 0 5px 0;
	box-shadow                  : 0 3px 3px rgba(0, 0, 0, 0.3), 0 0 1px rgba(0,0,0,0.2);
	-moz-box-shadow                  : 0 3px 3px rgba(0, 0, 0, 0.3), 0 0 1px rgba(0,0,0,0.2);
	-webkit-box-shadow               : 0 3px 3px rgba(0, 0, 0, 0.3), 0 0 1px rgba(0,0,0,0.2);
/*	-moz-border-radius-bottomleft       : 8px;
	-moz-border-radius-bottomright      : 8px;
	-webkit-border-bottom-left-radius   : 8px;
	-webkit-border-bottom-right-radius  : 8px; */

}
/* ... */

